// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem should render with a click handler 1`] = `""`;

exports[`MenuItem should render with a linkRenderer 1`] = `
<ListItem
  activeState={false}
  badge={null}
  brandStyles={Object {}}
  checkbox={false}
  className="root"
  compact={false}
  disableBackground={false}
  hasHoverState={false}
  icon={null}
  noShadow={false}
  secondLevel={false}
  value="Awesome Brand Portal!"
/>
`;

exports[`MenuItem should render with all optional props 1`] = `
<ListItem
  activeState={false}
  badge={null}
  brandStyles={
    Object {
      "menuIcon": "menuIcon",
    }
  }
  checkbox={false}
  className="root"
  compact={false}
  disableBackground={false}
  hasHoverState={false}
  icon={[Function]}
  iconProps={
    Object {
      "direction": "left",
      "svgClassName": "awesomeSVG",
    }
  }
  itemClass="seriously I thought css modules would solve this precarious css specificity nonsense"
  noShadow={false}
  secondLevel={false}
  value="Awesome Brand Portal!"
/>
`;

exports[`MenuItem should render with icon and default props 1`] = `
<ListItem
  activeState={false}
  badge={null}
  brandStyles={Object {}}
  checkbox={false}
  className="root"
  compact={false}
  disableBackground={false}
  hasHoverState={false}
  icon={[Function]}
  noShadow={false}
  secondLevel={false}
  value="Awesome Brand Portal!"
/>
`;

exports[`MenuItem should render with no icon and default props 1`] = `
<ListItem
  activeState={false}
  badge={null}
  brandStyles={Object {}}
  checkbox={false}
  className="root"
  compact={false}
  disableBackground={false}
  hasHoverState={false}
  icon={null}
  noShadow={false}
  secondLevel={false}
  value="Awesome Brand Portal!"
/>
`;
